# lemmatchers

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  extract_tags.pl  lemmatchers.cabal  verhelst-parser.cabal
.github/workflows/: haskell-ci.yml
app/: Main.hs  Matchers.hs  TagRecords.hs
cli/: Main.hs
data/: data.csv  data_short.csv  description.docx  matchers.txt  results.csv
lib/Lemmatchers/: CLI.hs  Main.hs  Matchers.hs  TagRecords.hs
test/: LemmatchersSpec.hs
test/Lemmatchers/: MatchersSpec.hs  TagRecordsSpec.hs
web/: Main.hs
