cabal-version:        3.0
name:                 lemmatchers
version:              0.1.0.0
synopsis:             Search tag sequences in large lemma data
license:              MIT
license-file:         LICENSE
author:               Mirko Westermeier
maintainer:           mirko.westermeier@uni-muenster.de
copyright:            (c) 2023 Mirko Westermeier, Service Center for Digital Humanities, University of Münster
category:             Data
extra-doc-files:      CODE_OF_CONDUCT.md
                    , README.md
extra-source-files:   data/*.csv
                    , data/matchers.txt
                    , extract_tags.pl

common warnings
  ghc-options:        -Wall

library
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  exposed-modules:    Lemmatchers.TagRecords
                    , Lemmatchers.Matchers
                    , Lemmatchers.CLI
  build-depends:      base ^>=4.17
                    , bytestring
                    , cassava
                    , text
                    , vector
  hs-source-dirs:     lib

executable lemmatchers-cli
  import:             warnings
  main-is:            Main.hs
  other-modules:
  build-depends:      base ^>=4.17
                    , lemmatchers
  hs-source-dirs:     cli
  default-language:   Haskell2010

executable lemmatchers-web
  import:             warnings
  main-is:            Main.hs
  other-modules:
  build-depends:      base ^>=4.17
                    , lemmatchers
                    , blaze-html
                    , blaze-markup
                    , bytestring
                    , cassava
                    , extra
                    , http-api-data
                    , http-client
                    , servant
                    , servant-server
                    , servant-blaze
                    , servant-multipart
                    , servant-cassava
                    , text
                    , vector
                    , warp
  hs-source-dirs:     web
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                    , DataKinds
                    , TypeOperators
                    , MultiParamTypeClasses

test-suite lemmatchers-test
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  build-depends:      base ^>=4.17
                    , hspec
                    , lemmatchers
                    , bytestring
                    , filepath
                    , temporary
                    , text
  main-is:            run-all-tests.hs
  other-modules:      LemmatchersSpec
  build-tool-depends: hspec-discover:hspec-discover
